B&L QA/objects/FCR_Account_Visit__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>FCR_Visits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Decision_Makers__c</fullName>
        <label>Decision Makers</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCR__c</fullName>
        <label>Surgical Field Coaching Report</label>
        <referenceTo>Surgical_Field_Coaching_Report__c</referenceTo>
        <relationshipName>FCR_Visits</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Objectives__c</fullName>
        <label>Objectives</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Scheduled_Date_Time__c</fullName>
        <label>Scheduled Date Time</label>
        <type>Date</type>
    </fields>
    <label>FCR Account Visit</label>
    <nameField>
        <displayFormat>V{00000}</displayFormat>
        <label>FCR visits Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>FCR Account Visits</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>